--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -17,7 +18,7 @@ android {
         minSdk 21
         targetSdk 31
         versionCode 2
-        versionName "1.0.1"
+        versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -80,4 +81,7 @@ dependencies {
 
     implementation files('libs/neuro-id-android-v1.0-release.aar')
     implementation "androidx.security:security-crypto:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
 }
