--- a/.github/workflows/update_library_release.yml
+++ b/.github/workflows/update_library_release.yml
@@ -67,3 +67,15 @@ jobs:
 
       - name: Distribute app to Beta track 🚀
         run: fastlane internal
+
+      - name: Send Slack Notification on Failure
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: mobile-sdk-tech-team
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
+          SLACK_MESSAGE: "Failed execution on master sdk build"
+          SLACK_TITLE: Failed master SDK
+          SLACK_USERNAME: rtBot
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
